@@ -1,5 +1,6 @@
 28 November 2018: Wouter
 	- Fix leak in chroot fix for auth-zone.
+	- Fix clang analysis for outside directory build test.
 
 27 November 2018: Wouter
 	- Fix DNS64 to not store intermediate results in cache, this avoids
